Refactor immutable classes to records, remove the 'equalsverifier' test dependency